--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
+    margin-top: 2rem;
 }
 
 .explore-menu h1{
@@ -53,4 +54,11 @@
 .explore-menu-list-item .active {
     border: 4px solid tomato;
     padding: 2px;
+}
+
+@media (max-width: 1050px){
+    .explore-menu-text {
+        max-width: 100%;
+        font-size: 14px;
+    }
 }
