--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -66,3 +66,55 @@
     top: -15px;
     right: -8px;
 }
+
+@media (max-width: 1050px){
+    .navbar .logo{
+        width: 9rem;
+    }
+
+    .navbar-menu{
+        gap: 1.25rem;
+        font-size: 1rem;
+    }
+    .navbar-right{
+        gap: 2rem;
+    }
+    .navbar-right img{
+        width: 1.5rem;
+    }
+
+    .navbar-right button {
+        padding: 0.5rem 1.5rem;
+    }
+}
+
+@media (max-width: 900px){
+    .navbar .logo{
+        width: 7.5rem;
+    }
+
+    .navbar-menu{
+        gap: 1rem;
+        font-size: 1rem;
+    }
+    .navbar-right{
+        gap: 1.25rem;
+    }
+    .navbar-right img{
+        width: 1.25rem;
+    }
+
+    .navbar-right button {
+        padding: 0.4rem 1.25rem;
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width: 750px){
+
+    .navbar-menu{
+        display: none;
+    }
+    
+}
